fix(components): prevent shift from `VisuallyHidden` (#1585)
* fix(components): prevent shift from `VisuallyHidden`

* fix: not combobox

--- a/packages/components/src/styles/Button.module.css
+++ b/packages/components/src/styles/Button.module.css
@@ -11,6 +11,7 @@
 	border: none;
 	outline: none;
 	white-space: nowrap;
+	position: relative;
 }
 
 .base[data-focus-visible] {
